[package]
name = "mdl_monkey"
edition = "2018"
version = "1.0.0"
authors = ["Matt Layher <mdlayher@gmail.com>"]
license = "MIT"
homepage = "https://github.com/mdlayher/monkey-rs"
repository = "https://github.com/mdlayher/monkey-rs"
documentation = "https://docs.rs/mdl_monkey"
keywords = ["monkey"]
description = """
A Rust implementation of the Monkey programming language from <https://interpreterbook.com/>.
"""

[badges]
maintenance = { status = "experimental" }

[dependencies]
byteorder = "1.3.2"
getopts = "0.2.21"
thiserror = "1.0.4"
